--- a/sass/layout/_main.scss
+++ b/sass/layout/_main.scss
@@ -22,7 +22,7 @@
 		background-position: center;
 		text-align: center;
 		&:hover .products__option-text {
-			transform: scale(1.6) translate(-30%, -30%);
+			transform: scale(1.6) translate(-32%, -30%);
 		}
 	}
 	&__img-1 {
